--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -27,7 +27,12 @@
             </tr>
             {% for message in message_list %}
             <tr>
-                <td>{{ message.message_text }}</td>
+                <!--FLAW 3: XSS -->
+                <td>{{ message.message_text|safe }}</td>
+
+                <!-- Fix for XSS:
+                <td>{{ message.message_text }}</td>-->
+                
                 <td>{{ message.pub_date }}</td>
                 {% if request.user.username == "admin" %}
                 <td><form action="{% url 'polls:message_delete' message.pk %}" method="post" style="display:inline;">
